--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "layinka",
   "license": "ISC",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.2.0",
     "@truffle/hdwallet-provider": "^1.4.0",
     "fs": "0.0.1-security",
     "web3": "^1.3.5"
